# flurr

./: .gitignore  Cargo.toml  README.md  flake.nix
core/: meson.build  meson_options.txt
core/data/: flurr.gresource.xml
core/examples/: flurr_demo.vala  meson.build
core/src/: Application.vala  config.vala.in  meson.build
core/src/dbus/: interfaces.vala  meson.build
core/src/dbus/services/: PinShellService.vala  ShellService.vala  WindowService.vala  utils.vala
core/src/flurr/: Application.vala  css.vala  meson.build
core/src/flurr/dbus/services/: ShellService.vala  utils.vala
core/src/flurr/widgets/: Shell.vala  property_types.vala
core/src/flurrdbus/: flurrdbus.vala  meson.build
core/src/widgets/: property_types.vala
core/subprojects/flurr/: meson.build  meson_options.txt
core/subprojects/flurr/dbus/: lib.vala
core/subprojects/flurr/dbus/services/: ApplicationService.vala  PinShellService.vala
core/subprojects/flurr/widgets/: PinShell.vala
core/subprojects/flurrdbus/: config.vala.in  meson.build
crates/flurr-dbus/: Cargo.toml
crates/flurr-dbus/src/: lib.rs
crates/flurr-dbus/src/props/: mod.rs  pin_shell.rs  shell.rs  window.rs
crates/flurr-dbus/src/proxy/: application.rs  mod.rs  pin_shell.rs  shell.rs  window.rs
crates/flurr-enums/: Cargo.toml
crates/flurr-enums/src/: anchor.rs  keyboard_mode.rs  layer.rs  lib.rs
crates/flurrctl/: Cargo.toml
crates/flurrctl/src/: args.rs  error.rs  main.rs
crates/flurrctl/src/app/: instances.rs  mod.rs  quit.rs
crates/flurrctl/src/cmds/: app.rs  mod.rs  window.rs  windows.rs
crates/flurrctl/src/window/: get.rs  list.rs  mod.rs  property_flags.rs  set.rs  toggle.rs  visibility.rs
dbus/: Application.xml  PinShell.xml  Shell.xml  io.flurr.Application.xml  io.flurr.Shell.xml  io.flurr.Window.xml
flurr/: Cargo.toml  meson.build  meson_options.txt
flurr-core/: meson.build
flurr-core/data/: style.css
flurr-core/src/: Application.vala  meson.build
flurr-core/src/widgets/: PinShell.vala  PinWindow.vala  Shell.vala  Window.vala
flurr-core/tests/: meson.build  test_app.vala
flurr-dbus/: Cargo.toml
flurr-dbus/src/: application.rs  lib.rs  pin_shell.rs  shell.rs  window.rs
flurr-dbus/src/proxy/: application.rs  mod.rs  pin_shell.rs  shell.rs  window.rs
flurr/data/: flurr.gresource.xml
flurr/examples/: flurr_demo.vala  meson.build
flurr/src/: Application.vala  main.rs  meson.build
flurr/src/dbus/: ApplicationService.vala  PinShellService.vala  ShellService.vala  WindowService.vala  interfaces.vala  lib.vala  utils.vala
flurr/src/dbus/services/: ApplicationService.vala  ShellService.vala  WindowService.vala
flurr/src/widgets/: PinShell.vala  Shell.vala  property_types.vala
flurrctl/: Cargo.toml
flurrctl/src/: args.rs  error.rs  main.rs  window.rs
flurrctl/src/cmds/: app.rs  instances.rs  mod.rs  window.rs
nix/pkgs/: default.nix  flurr.nix  flurrctl.nix  flurrdbus.nix
rimice/: Cargo.toml
rimice-core/: meson.build  meson_options.txt
rimice-core/src/: Application.vala  meson.build
rimice-core/src/widgets/: PinWindow.vala  Window.vala
rimice-core/tests/: meson.build  test_app.vala
rimice/src/: main.rs
rimicore/: Cargo.toml
