[package]
name = "flurrctl"
version = "0.1.0"
license = "MPL-2.0"
description = "CLI to interact with Flurr instances"
keywords = ["cli", "terminal", "client"]
categories = ["command-line-utilities"]
repository = "https://github.com/mimvoid/flurr"
edition = "2024"

[dependencies]
flurr-dbus = { path = "../flurr-dbus" }
clap = { version = "4.5", features = ["derive"] }
dbus = "0.9.9"
log = "0.4.28"
env_logger = { version = "0.11.8", features = ["auto-color"], default-features = false }
