[package]
name = "flurr-enums"
version = "0.1.0"
license = "MPL-2.0"
description = "Rust bindings for Flurr enums"
repository = "https://github.com/mimvoid/flurr"
edition = "2024"

[features]
default = ["strum"]
strum = ["dep:strum"]

[dependencies]
bitflags = "2.9.4"
strum = { version = "0.27.2", features = ["derive"], optional = true }
